Fix for scrollbar visibility and edge browser table footnote

--- a/customGO.css
+++ b/customGO.css
@@ -11286,7 +11286,7 @@ article.card-row a:hover .content h4 {
 }
 
 .content-area-custom ol li > div {
-    display: inline-grid;
+    display: inline-grid !important;
     /* inline-grid */
     display: -moz-grid-line;
     display: -webkit-inline-grid;
@@ -12155,8 +12155,8 @@ ol + div.table-container.expandable-table {
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    opacity: 0;
-    filter: alpha(opacity=0);
+    opacity: 1;
+    filter: alpha(opacity=1);
     -o-transition: background-color .2s linear, opacity .2s linear;
     -webkit-transition: background-color .2s linear, opacity .2s linear;
     -moz-transition: background-color .2s linear, opacity .2s linear;
@@ -12165,20 +12165,20 @@ ol + div.table-container.expandable-table {
 
 .ps-container:hover .ps-scrollbar-x-rail,
 .ps-container.hover .ps-scrollbar-x-rail {
-    opacity: 0.6;
+    opacity: 1;
     filter: alpha(opacity=60);
 }
 
 .ps-container .ps-scrollbar-x-rail:hover,
 .ps-container .ps-scrollbar-x-rail.hover {
     background-color: #eee;
-    opacity: 0.9;
+    opacity: 1;
     filter: alpha(opacity=90);
 }
 
 .ps-container .ps-scrollbar-x-rail.in-scrolling {
     background-color: #eee;
-    opacity: 0.9;
+    opacity: 1;
     filter: alpha(opacity=90);
 }
 
@@ -12190,7 +12190,7 @@ ol + div.table-container.expandable-table {
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    opacity: 0;
+    opacity: 1;
     filter: alpha(opacity = 0);
     -o-transition: background-color .2s linear, opacity .2s linear;
     -webkit-transition: background-color .2s linear, opacity .2s linear;
@@ -12200,20 +12200,20 @@ ol + div.table-container.expandable-table {
 
 .ps-container:hover .ps-scrollbar-y-rail,
 .ps-container.hover .ps-scrollbar-y-rail {
-    opacity: 0.6;
+    opacity: 1;
     filter: alpha(opacity=60);
 }
 
 .ps-container .ps-scrollbar-y-rail:hover,
 .ps-container .ps-scrollbar-y-rail.hover {
     background-color: #eee;
-    opacity: 0.9;
+    opacity: 1;
     filter: alpha(opacity=90);
 }
 
 .ps-container .ps-scrollbar-y-rail.in-scrolling {
     background-color: #eee;
-    opacity: 0.9;
+    opacity: 1;
     filter: alpha(opacity=90);
 }
 
@@ -12265,7 +12265,7 @@ ol + div.table-container.expandable-table {
 
 .ps-container.ie .ps-scrollbar-x,
 .ps-container.ie .ps-scrollbar-y {
-    visibility: hidden;
+    visibility: visible;
 }
 
 .ps-container.ie:hover .ps-scrollbar-x,
